[gd_scene format=3 uid="uid://v0sked7wrod7"]

[ext_resource type="Script" uid="uid://ss765ywvw8a4" path="res://example_godot/menutest.gd" id="1_kw2sm"]
[ext_resource type="PackedScene" uid="uid://bwlmqs4l40mxf" path="res://example_godot/exit.tscn" id="2_b4xnm"]

[node name="menu" type="Control" unique_id=1146205673]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kw2sm")

[node name="VBoxContainer" parent="." unique_id=658975175 instance=ExtResource("2_b4xnm")]
layout_mode = 0

[node name="ColorRect" type="ColorRect" parent="." unique_id=1085297530]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1882353, 0.007843138, 0.2, 1)
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="GridContainer" parent="." unique_id=2057246804]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -33.0
offset_right = 94.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="nostr gift" type="Button" parent="TabContainer" unique_id=810387184]
layout_mode = 2
text = "nostr gift"

[node name="nostr_observer" type="Button" parent="TabContainer" unique_id=1291688190]
layout_mode = 2
text = "test with observed"

[node name="pkarr" type="Button" parent="TabContainer" unique_id=439401269]
layout_mode = 2
text = "pkarr"

[node name="key" type="Button" parent="TabContainer" unique_id=214177876]
layout_mode = 2
text = "key nostr"

[node name="nostronger" type="Button" parent="TabContainer" unique_id=1301472206]
layout_mode = 2
text = "nostringer"

[connection signal="pressed" from="TabContainer/nostr gift" to="." method="_on_nostr_gift_pressed"]
[connection signal="pressed" from="TabContainer/nostr_observer" to="." method="_on_nostr_pressed"]
[connection signal="pressed" from="TabContainer/pkarr" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TabContainer/key" to="." method="_on_key_pressed"]
[connection signal="pressed" from="TabContainer/nostronger" to="." method="_on_nostronger_pressed"]
